--- a/Admin/settings.html
+++ b/Admin/settings.html
@@ -521,6 +521,7 @@
             Object.values(categories).forEach(container => {
                 container.innerHTML = '';
             });
+            document.getElementById("loading").style.display = "none"
 
             if (einstellungenListe.length === 0) {
                 Object.values(categories).forEach(container => {
