made ladeEinstellungen public

--- a/Admin/settings.html
+++ b/Admin/settings.html
@@ -501,6 +501,8 @@
             return result;
         }
 
+        window.ladeEinstellungen = ladeEinstellungen
+
         // Funktion zum Generieren von Beschreibungen
         function getSettingDescription(key) {
             const descriptions = {
