fixed username paluss1122

--- a/Latein/index.html
+++ b/Latein/index.html
@@ -334,7 +334,7 @@
 
                 if (founduser) {
                     try {
-                        if (founduser.username === "Paluss1122" && active) {
+                        if (founduser.username === "Plus1122" && active) {
                             showMaintenance = false;
                             document.title = 'Latein Vokabeln';
                         } else {
@@ -347,7 +347,7 @@
                         showMaintenance = active;
                     }
                 } else if (localStorage.getItem('username')) {
-                    if (localStorage.getItem('username') === "Paluss1122" && active) {
+                    if (localStorage.getItem('username') === "Plus1122" && active) {
                         showMaintenance = false;
                         document.title = 'Latein Vokabeln';
                     } else {
