--- a/Maths/index.html
+++ b/Maths/index.html
@@ -455,7 +455,7 @@
 
             if (founduser) {
                 try {
-                    if (founduser.username === "Paluss1122" && active) {
+                    if (founduser.username === "Plus1122" && active) {
                         showMaintenance = false;
                         document.title = 'Mathe Lösungen';
                     } else {
@@ -468,7 +468,7 @@
                     showMaintenance = active;
                 }
             } else if (localStorage.getItem('username')) {
-                if (localStorage.getItem('username') === "Paluss1122" && active) {
+                if (localStorage.getItem('username') === "Plus1122" && active) {
                     showMaintenance = false;
                     document.title = 'Mathe Lösungen';
                 } else {
